--- a/exp-meta.tex
+++ b/exp-meta.tex
@@ -89,7 +89,7 @@ de algumas bases com a estratégia de amostragem por agrupamento.
 curtose (\textit{idem}) & formula? \\ \hline
 \makecell{$\val_{min}$,$\val_{max}$,\\$\val_{min/max}$,$\val_{avg}$} &
 \makecell{quantidade de valores\\nominais (\textit{idem})} &
-$\val=\{|a| \mid \forall a\in A,\nom(a)=1\}$\\ \hline
+\ano{verificar:} $\val=\{|a| \mid \forall a\in A,\nom(a)=1\}$\\ \hline
 % Rnd & \makecell{exploratória\\aleatória} & \makecell{agnóstica}&autônoma&nenhuma&$\mathcal{O}(0)$\\ \hline
 \end{tabular}
 \end{table}
