--- a/imagens/macros-pgf.tex
+++ b/imagens/macros-pgf.tex
@@ -1,6 +1,6 @@
 \usepackage{pgfplots}
 \usetikzlibrary{external}
-\pgfplotsset{compat=1.11}
+% \pgfplotsset{compat=1.11}
 \usetikzlibrary{plotmarks}
 \usetikzlibrary{scopes,shapes,shadows,calc,arrows,shapes.symbols,automata,decorations.pathmorphing,backgrounds,fit,positioning}
 
