terminei terminologia/notacao

--- a/tese.tex
+++ b/tese.tex
@@ -146,10 +146,8 @@
 
 %%%%%%%%%%%%%%%% FORMATACAO DE PALAVRAS %%%%%%%%%%%%%%%%%%%%%
 
-\newcommand{\nf }[1] % nome de ferramenta
-    {\textsc{#1}}
-\newcommand{\pe }[1] % termo em ingles
-    {\textit{#1}}
+\newcommand{\nf }[1]    {\textsc{#1}}
+\newcommand{\pe }[1]    {\textit{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{ctable}
