--- a/tex/exp-comites.tex
+++ b/tex/exp-comites.tex
@@ -1,5 +1,5 @@
 Um novo experimento foi realizado, avaliando HTU e também a recomendação de algoritmos de aprendizado de máquina em outras condições.
-Por conveniência, apenas os aspectos mais relevantes da metodologia adotada nas seções anteriores foram considerados.
+Por conveniência, apenas os aspectos mais relevantes do método experimental adotado nas seções anteriores foram considerados.
 Todos os experimentos reportados até este ponto no texto foram baseados no mesmo grupo de algoritmos de aprendizado enquanto aprendizes ativos: 5NNw, C4.5w, NB e SVM.
 
 O novo experimento procura verificar o efeito da adoção, como aprendizes ativos, de um grupo de dois algoritmos baseados em comitê, (aprendiz ativo)RFw e (aprendiz ativo)RoF, possivelmente com maior poder preditivo do que o grupo anterior - conforme discutido no Capítulo \ref{metodologia}.
