--- a/tex/pre-textual/agradecimentos.tex
+++ b/tex/pre-textual/agradecimentos.tex
@@ -2,10 +2,10 @@ Algumas virtudes surgem sem anúncio.
 Imagino que a experiência quádrupla da paternidade/maternidade tenha surpreendido meus pais em muitos aspectos.
 Hoje compreendo os momentos possivelmente mais difíceis, aqueles em que a paciência e dedicação é resultado de puro esforço - quando é preciso manter o mundo girando, com ou sem instinto, romantismo ou qualquer outro impulso adicional.
 Expresso aqui meu agradecimento a Julio e Eliana, e meus irmãos.
-Por outro lado, o orientação acadêmica também traz seus ensinamentos para a vida.
+Similarmente, a orientação acadêmica também traz seus ensinamentos para a vida.
 Desde o prof. João da época do mestrado e seus sábios conselhos existenciais disponíveis até hoje, até o prof. André, exemplo de ânimo e humildade.
 Agradeço a ele pela sua permanente disposição em ajudar e sua paciência ao longo de cinco anos.
-Agradeço também às contribuições da Banca, cujo interesse e dedicação na apreciação do trabalho ajudaram a dar significado a este momento.
+Agradeço também às contribuições da banca, cujo interesse e dedicação na apreciação do trabalho ajudaram a dar significado a este momento.
 
 Este trabalho mal teria um começo sem a ajuda de Luís P. Garcia e certamente teria sido mais difícil sem o apoio ou material de Angela Giampedro, Lhaís V., T. Covões, R. Mantovani, R. Cerri, P. Pisani, P. Jaskowiak, L. Colleta, D. Horta e F. Zuher.
 Outras pessoas, como R. Sadao, R. Rigolin, Rafaela D., Uziel, Ligia T., Danira e Fernando, Virgínia V., Camila T., Elaine K., Pâmela C., Vital F., T. Galante, M. Manzato, Herr Marcos V., Nayara, Renan e Larissa Campos merecem meu carinho por terem sido minha família sancarlense por tantos anos.
