--- a/tex/propostas.tex
+++ b/tex/propostas.tex
@@ -608,4 +608,4 @@ Inicialmente, meta-atributos são extraídos do conjunto de dados, caracterizand
 Uma base de conhecimento previamente construída por meio da caracterização de outros conjuntos, cujos melhores algoritmos de aprendizado são conhecidos, é utilizada como metaconjunto.
 Idealmente, um metamodelo induzido com esse metaconjunto permitiria predizer qual o melhor  algoritmo e, possivelmente, a melhor estratégia ou o melhor par estratégia-algoritmo.
 
-As propostas aqui apresentadas foram avaliadas empiricamente de acordo com a metodologia descrita no Capítulo \ref{metodologia}.
+As propostas aqui apresentadas foram avaliadas empiricamente de acordo com o método descrito no Capítulo \ref{metodologia}.
