--- a/thesis.tex
+++ b/thesis.tex
@@ -36,7 +36,7 @@ A estratégia de amostragem proposta é demonstrada competitiva empiricamente.
 Adicionalmente, experimentos iniciais com meta-aprendizado indicam a possibilidade de sua aplicação em aprendizado ativo, embora tenha sido identificado que investigações mais extensivas e aprofundadas sejam necessárias para apurar sua real efetividade prática.
 
 Importantes contribuições metodológicas são descritas neste documento, incluindo uma análise frequentemente negligenciada pela literatura da área: o risco devido à variabilidade dos algoritmos.
-Por fim, uma das principais contribuições deste trabalho são as curvas e faixas de ranqueamento, capazes de sumarizar, num único gráfico, experimentos de uma grande coleção de conjuntos de dados.
+Por fim, são propostas as curvas e faixas de ranqueamento, capazes de sumarizar, num único gráfico, experimentos de uma grande coleção de conjuntos de dados.
 
 }{Aprendizado de máquina, Aprendizado ativo, Meta-aprendizado}
 \textoresumo[english]{
@@ -174,7 +174,7 @@ A filosofia [ideal] pode ser resumida em uma única palavra: equilíbrio.
 } - \citeonline {honore2006praise}, sobre o culto à velocidade e o benefício da lentidão para uma vida com mais significado.}
 \input{tex/propostas}
 
-\chapter{Metodologia} \label{metodologia} \thispagestyle{empty}
+\chapter{Método experimental} \label{metodologia} \thispagestyle{empty}
 \epigraph{
 \textit{Bien loin que l'objet précède le point de vue, on dirait que c'est le point de vue qui crée l'objet}\ldots
 }{Ferdinand de Saussure\footnotemark[1]}
