commit q acho q esqeci

--- a/thesis.tex
+++ b/thesis.tex
@@ -330,7 +330,7 @@ Deixo registrado nas páginas seguintes, algumas fotos recentes e uma tentativa 
 \begin{landscape}
 \begin{figure}
 \centering
-\includegraphics[height=15.2cm]{figue}
+\includegraphics{figue}
 \caption*{A figueira estável e mais desenvolvida foi removida, enquanto que a figueira mais inclinada (à direita da foto) foi mantida. Dois dias antes do depósito deste documento, havia profissionais realizando  levantamento topográfico na área. Faz pensar em qual seria o real critério do corte.}
 \end{figure}
 \end{landscape}
